[package]
name = "queues"
version = "0.1.0"
authors = ["Seoyun Son <seoyun.son@kaist.ac.kr>", "Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.7"
crossbeam-utils = "0.6"
